<resources>
    <string name="app_name">BaSaya</string>
    <string name="register"><u>Wala pang account? Mag register</u></string>
    <string name="app_title">BaSaya</string>
    <string name="kumusta_kaibigan_nhanda_kanabang_mag_basa">Kumusta kaibigan!\nHanda kanabang mag basa?</string>
    <string name="email">Email</string>
    <string name="ilagay_ang_iyong_email">Ilagay ang iyong email</string>
    <string name="password">Password</string>
    <string name="ilagay_ang_iyong_password">Ilagay ang iyong password</string>
    <string name="mag_login">Mag Login</string>
    <string name="gumawa_ng_account">Gumawa ng account</string>
    <string name="gumawa_ng_bagong_account">Gumawa ng Bagong Account</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_name">First Name</string>
    <string name="ilagay_ang_iyong_first_name">Ilagay ang iyong first name</string>
    <string name="middle_name">Middle Name</string>
    <string name="ilagay_ang_iyong_middle_name">Ilagay ang iyong middle name</string>
    <string name="ilagay_ang_iyong_last_name">Ilagay ang iyong last name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="account_information">Account Information</string>
    <string name="ilagay_ang_iyong_username">Ilagay ang iyong username</string>
    <string name="mag_register">Mag-Register</string>
    <string name="may_account_na_mag_login">May account na? Mag-Login</string>
    <string-array name="gender_options">
        <item>Piliin ang Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="progress">Progress</string>
    <string name="account">Account</string>
    <string name="more_options">More options</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="mga_gawain">Mga Gawain</string>
    <string name="name">Name</string>
    <string name="maghanap_dito_ng_paksa">Maghanap dito ng paksa...</string>
    <string name="masiglang_araw_ng_pagbabasa">Masiglang Araw ng Pagbabasa!</string>
    <string name="tap_to_continue">Pumindot upang magpatuloy.</string>
    <string name="next_page">Next Page</string>
    <string name="next">SUSUNOD</string>

    <string name="cta_add_class">Pumasok sa Klase</string>
    <string name="cta_add_class_description">Magdagdag ng bagong klase</string>
    <string name="join_class_sheet_title">Sumali sa klase</string>
    <string name="join_class_sheet_message">Ilagay ang code ng klase para makita ang iyong mga aralin.</string>
    <string name="enter_class">Pumasok sa klase</string>

    <string name="close">Isara</string>
    <string name="join">Sumali</string>
    <string name="signed_in_as">Kasalukuyan kang naka-sign in bilang</string>
    <string name="profile_photo">Larawan sa profile</string>
    <string name="join_class_instruction">Hingin sa iyong guro ang class code at ilagay ito rito.</string>
    <string name="class_code">Class code</string>
    <string name="internet_connection_required">Kailangan ng internet connection</string>
    <string name="toast_join_class_first">Sumali muna sa isang klase.</string>
    <string name="toast_download_success">Matagumpay na na-download ang aralin.</string>
    <string name="toast_download_failed">Hindi na-download. Siguraduhing may internet at subukan muli.</string>
    <string name="toast_remove_download_success">Naalis ang download.</string>
    <string name="toast_remove_download_failed">Hindi na-alis ang download. Subukan muli.</string>
    <string name="offline_lesson_message">Hindi pa na-download ang “%1$s”. Kumonekta sa internet at pindutin ang Download.</string>
    <string name="empty_not_in_class">Wala ka pang nasalihang klase.\nPindutin ang button sa ibaba para sumali gamit ang class code.</string>
    <string name="empty_no_lessons">Wala pang nakatalagang aralin.\nBumalik muli para tingnan ang mga bagong gawain.</string>
    <string name="empty_no_search_results">Walang resulta para sa \u201c%1$s\u201d.</string>
    <string name="error_checking_class_membership">May problema sa koneksyon. Subukan muli.</string>

    <string name="profile_picture">Profile picture</string>
</resources>